--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -2,4 +2,5 @@ body {
   background-color: #f5f5f5;
   width: 320px;
   height: 512px;
+  font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
