--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,4 +1,10 @@
+html {
+  font-size: 62.5%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 body {
-  background-color: #f5f5f5;
-  font-family: 'Roboto';
+  background-color: #EBF8FF;
+  display: grid;
+  place-content: center;
 }
